# py-apteco

./: .bumpversion.cfg  .gitignore  README.md  azure-pipelines.yml  pyproject.toml
docs/: Makefile  build-docs.sh  make.bat  readme_generator.py
docs/source/: apteco-api.rst  apteco_website.rst  changelog.rst  changelog_apteco_api.rst  conf.py  getting_started.rst  index.rst  install.rst  reference.rst  tutorial.rst
docs/source/_static/: theme_overrides.css
docs/source/reference/topics/: cube.rst  cubes.rst  datagrid.rst  datagrids.rst  selections.rst  session.rst  tables.rst  variables.rst
docs/source/tutorials/: tutorial_01.rst  tutorial_02.rst  tutorial_03.rst  tutorial_04.rst  tutorial_05.rst  tutorial_06.rst  tutorial_07.rst  tutorial_08.rst  tutorial_09.rst
src/apteco/: __init__.py  common.py  cube.py  datagrid.py  exceptions.py  query.py  session.py  statistics.py  tables.py  variables.py
src/apteco/data/: apteco_logo.py
tests/: pytest.ini  test_apteco.py
tests/apteco/: cube_test.py  datagrid_test.py  query_test.py  session_test.py
tests/functional_tests/: conftest.py  query_functional_test.py  session_functional_test.py  statistics_functional_test.py  table_functional_test.py  tables_functional_test.py  variables_functional_test.py
tests/integration_tests/: conftest.py  create_variables_test.py  cube_integration_test.py  datagrid_integration_test.py  limits_integration_test.py  query_integration_test.py  session_integration_test.py  statistics_integration_test.py  table_functional_test.py  table_integration_test.py  tables_integration_test.py  variables_integration_test.py
tests/integration_tests/data/: cube_001_people_various_dimensions.csv  cube_002_bookings_before_2020_cost_less_than_500.csv  cube_003_people_dimensions_bookings_table.csv  cube_004_bookings_dimensions_households_selection_people_table.csv  cube_005_mixed_households_people_dimensions_households_table.csv  cube_006_mixed_hhds_jnys_ppl_dimensions_people_selection_journeys_table.csv  cube_007_bookings_single_dimension_default_count_measure.csv  cube_008_bookings_dimension_destination_measure_sum_profit.csv  cube_009_bookings_multiple_measures.csv  cube_010_bookings_measures_smorgasbord.csv  cube_011_bookings_banded_date_day.csv  cube_011_bookings_banded_date_month.csv  cube_011_bookings_banded_date_quarter.csv  cube_011_bookings_banded_date_year.csv  datagrid_001_bookings_various_columns.csv  datagrid_002_policies_2000_rows_various_columns.csv  datagrid_003_web_visits_mobile_social_media_1500_rows_all_columns.csv  datagrid_004_bookings_with_households_selection.csv  datagrid_005_bookings_with_mixed_columns.csv
tests/unit_tests/apteco/: common_test.py  conftest.py  cube_test.py  datagrid_test.py  limits_test.py  query_test.py  session_test.py  statistics_test.py  tables_test.py  variables_test.py
