[tool.poetry]
name = "apteco"
version = "0.1.2"
description = "A Python package for interacting with Apteco Marketing Suite resources via the Apteco API."
authors = ["Apteco Ltd <support@apteco.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
apteco-api = "^0.1.5"
pysimplegui = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest-mock = "^1.10"
sphinx = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
