[tool.poetry]
name = "apteco"
version = "0.4.0"
description = "A Python package for interacting with Apteco Marketing Suite resources via the Apteco API."
authors = ["Apteco Ltd <support@apteco.com>"]
license = "Apache-2.0"
readme = "docs/source/getting_started.rst"
repository = "https://github.com/Apteco/py-apteco"
keywords = ["Apteco", "FastStats", "Orbit", "API", "Marketing"]
classifiers = [
    "Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.6"
apteco-api = "^0.1.8"
pysimplegui = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest-mock = "^1.10"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
