[tool.poetry]
name = "apteco"
version = "0.8.1-beta.1"
description = "A Python package for interacting with Apteco Marketing Suite resources via the Apteco API."
authors = ["Apteco Ltd <support@apteco.com>"]
license = "Apache-2.0"
readme = "docs/source/readme.rst"
homepage = "https://help.apteco.com/python/index.html"
repository = "https://github.com/Apteco/py-apteco"
keywords = ["Apteco", "FastStats", "Orbit", "API", "Marketing"]
classifiers = [
    "Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6.1"  # pandas 1.0 requires >=3.6.1, see: https://github.com/pandas-dev/pandas/pull/29212#issuecomment-551370118
apteco-api = "^0.3.1"
pysimplegui = "^4.0"
pandas = "^1.0"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pytest-mock = "^1.10"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"
pytest-cov = "^2.8"
pytest-cases = "^2.0.4"
twine = "^3.2.0"
bump2version = "^1.0.1"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
